--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">OliBerry Designs</a>
+                <a class="navbar-brand page-scroll" href="#page-top">
+                <img src="/img/oliberry-logo-v2.png" />
+                </a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -81,10 +83,12 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">STRATEGY · DESIGN · DEVELOPMENT</div>
-               <!--<div class="intro-heading">Digital doesn't have to be difficult!</div>-->
+                <!--<h3 class="intro-heading">Brilliant design to connect your brand to the world.</h3>-->
+                <div class="intro-lead-in">WEB DESIGN STUDIO</div>
                 <div class="intro-heading-description">Whether you need a new Wordpress or Squarespace website, a hand with your existing content, or want to spread the word about your work or products, we can help! </div>
-                
+                <a href="#about" class="btn btn-circle page-scroll pulse">
+                            <i class="fa fa-angle-double-down"></i>
+                </a>
 
                <!-- <a href="#services" class="page-scroll btn btn-xl">Learn More About Us</a> -->
             </div>
@@ -950,7 +954,7 @@
 
 
 
-                                <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                                <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                             </div>
                         </div>
                     </div>
